--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
         "@wdio/local-runner": "^7.24.0",
         "@wdio/spec-reporter": "^7.24.0",
         "chromedriver": "^105.0.0",
+        "prettier": "^2.7.1",
         "ts-node": "^10.9.1",
         "typescript": "^4.8.3",
         "wdio-chromedriver-service": "^7.3.2"
