--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
         "@wdio/spec-reporter": "^7.24.0",
         "chromedriver": "^105.0.0",
         "prettier": "^2.7.1",
+        "puppeteer": "^18.0.5",
         "ts-node": "^10.9.1",
         "typescript": "^4.8.3",
         "wdio-chromedriver-service": "^7.3.2"
